--- a/package.json
+++ b/package.json
@@ -40,7 +40,15 @@
 			"commit-msg": "commitlint -c .commitlintrc.json -E HUSKY_GIT_PARAMS"
 		}
 	},
+	"lint-staged": {
+		"*.ts": [
+			"eslint --fix",
+			"prettier --write"
+		]
+	},
 	"devDependencies": {
+		"@commitlint/cli": "^19.8.1",
+		"@commitlint/config-conventional": "^19.8.1",
 		"@nestjs/cli": "^10.0.0",
 		"@nestjs/common": "^10.4.8",
 		"@nestjs/core": "^10.4.8",
@@ -56,6 +64,7 @@
 		"eslint-plugin-prettier": "^5.0.0",
 		"husky": "^9.1.7",
 		"jest": "^29.5.0",
+		"lint-staged": "^16.0.0",
 		"prettier": "^3.0.0",
 		"reflect-metadata": "^0.1.13",
 		"source-map-support": "^0.5.21",
