--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	"scripts": {
 		"build": "tsc -p tsconfig.json",
 		"precommit": "lint-staged",
+		"prepare": "npm run build",
 		"prepublish:npm": "npm run build",
 		"publish:npm": "npm publish --access public"
 	},
